Fix text overflow and deacons wrong numbers

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,6 +13,14 @@
     @apply transition-colors duration-500;
 }
 
+.fc-daygrid-event {
+    white-space: normal!important;
+}
+
+.fc-timegrid-event-harness {
+    width: 33%;
+}
+
 @layer utilities {
     @variants responsive {
         /* Chrome, Safari and Opera */
